[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "colink-core"
version = "0.1.0"
description = "COLINK core services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "pydantic>=2"
]

[project.optional-dependencies]
sim = [
  "numpy>=1.26,<3; python_version < '3.13'",
  "numpy>=2.1,<3; python_version >= '3.13'",
  "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
# Only include our real Python packages; exclude CI/codeql/artifacts/etc.
include = ["colink_core*", "routes*", "xrpay*"]
exclude = ["artifacts*", "codeql_*", "charts*", "configs*", "compliance*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
# Runtime dep for config.py
pydantic-settings = ">=2.6.0"
