[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colink-core"
version = "0.1.0"
description = "COLINK core library"
authors = [{ name = "Rafaelito" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["colink_core*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]