[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colink-core"
version = "0.0.0"
description = "COLINK core simulation + bridge prototypes"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "R A" }]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pyarrow",
  "tabulate"
]

[project.optional-dependencies]
test = ["pytest","pytest-cov"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["colink_core*"]
exclude = ["tests*"]